Bug 204531. Remove bogus RTL listbox reflow hack. Fix border computation for desired size of combobox dropdowns.